# MelonSeed

./: .gitignore  .gitmodules  README.md  generate-lib.ps1  libgen.ps1
MelonSeed/: .gitignore  CMakeLists.txt
MelonSeed.Plugin/: MelonSeed.Plugin.csproj  MelonSeed.Plugin.sln  MelonSeed.cs  Plugin.cs  Plugin.targets
MelonSeed.Plugin/Properties/: AssemblyInfo.cs
MelonSeed/include/: callbacks.hpp  main.hpp  modloader.hpp  modloader_internal.hpp
MelonSeed/shared/: files.hpp  logger.hpp  melon_seed.hpp  modloader.hpp
MelonSeed/shared/il2cpp/: il2cpp_functions.hpp
MelonSeed/src/: callbacks.cpp  files.cpp  logger.cpp  main.cpp  modloader.cpp
Plugin/: MelonSeed.csproj  MelonSeed.sln  Plugin.cs
Plugin/Properties/: AssemblyInfo.cs
TestMod/: CMakeLists.txt
TestMod/src/: main.cpp
